--- a/linux_config.yaml
+++ b/linux_config.yaml
@@ -28,15 +28,18 @@ tasks:
   - name: 'Install a nerd font'
     cmds:
       [
-        'cd ~/.local/share/fonts && curl -fLO https://github.com/ryanoasis/nerd-fonts/raw/HEAD/patched-fonts/FantasqueSansMono/Regular/FantasqueSansMNerdFontMono-Regular.ttf',
+        'mkdir -p ~/.local/share/fonts/'
+        'cd ~/.local/share/fonts', 
+        'curl -fLO https://github.com/ryanoasis/nerd-fonts/raw/HEAD/patched-fonts/FantasqueSansMono/Regular/FantasqueSansMNerdFontMono-Regular.ttf',
+        'cd $HOME'
       ]
 
   - name: 'Install Mega'
     cmds:
       [
         'curl https://mega.nz/linux/repo/Debian_11/amd64/megasync-Debian_11_amd64.deb -o mega.deb',
-        sudo apt install mega.deb,
-        rm mega.deb,
+        'sudo apt install mega.deb',
+        'rm mega.deb'
       ]
 
   - name: 'Install Spotify'
